tests/errors/lexing/test02.cmp
program main 
begin
    var x : int_  (* id cannot end in underscore *)
end 